# design-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: README.md  deploy.yml
contracts/: landing_page.yaml  survey_funnel.yaml
migrations/: 001_design_mcp_tokens.sql  002_oauth_tables.sql  003_drafts.sql  003_oauth_code_reuse_revoke.sql  004_drafts_add_slug.sql  005_drafts_add_publish_cols.sql  006_screenshot_cache.sql  007_drafts_clarifying_state.sql
src/design_mcp/: __init__.py  auth.py  config.py  db.py  drafts.py  images.py  intake_state_machine.py  manifest.py  oauth_provider.py  preview.py  repo.py  screenshots.py  server.py  token_verifier.py
src/design_mcp/generators/: __init__.py  _brief_template.py  landing_page.py  survey_funnel.py
tests/: test_day3_refactor.py  test_images.py  test_intake_state_machine.py  test_oauth_provider.py  test_preview.py  test_screenshots.py  test_survey_funnel.py  test_token_verifier.py
